# kupier-db

./: .gitignore  Cargo.toml  README.md
docs/: research_notes.md
kupier-core/: Cargo.toml
kupier-core/src/: error.rs  lib.rs
kupier-core/src/db/: mod.rs
kupier-core/src/storage/: btree.rs  data.rs  engine.rs  kv.rs  mod.rs  page.rs  test.rs
kupier-core/src/storage/page/: data.rs  descriptor.rs  mod.rs  super_page.rs
kupier-test/: Cargo.toml
kupier-test/src/: calculator.rs  main.rs
sample_data/: conversations.json
