[package]
name = "kupier-core"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Stuff for serialization ...
bincode = "1.3.3"
bson = "2.0.1"
serde = "~1.0.130"
serde_derive = "~1.0.130"
serde_json = "1.0.69"
serde_bytes = "0.11.5"
log = "0.4.14"

# Async / Await
tokio = "1.13.0"
# bson = "2.0.1"
# serde = "1.0.130"