[package]
name = "kupier-test"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kupier-core = { path = "../kupier-core" }
serde_json = "1.0.69"
bson = "2.0.1"
bincode = "1.3.3"
chrono = "0.4.19"
log = "0.4.14"
log4rs = "1.0.0"
num-format = "0.4.0"

[dev-dependencies]